Fixed some layout problems, started catalog page

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  min-width: 1200px;
+  min-width: 800px;
   margin: 0;
   padding: 0;
 
@@ -25,10 +25,6 @@ body {
 #overlay.active {
   opacity: 1;
   pointer-events: auto;
-}
-img {
-  max-width: 100%;
-  height: auto;
 }
 
 a {
@@ -251,12 +247,16 @@ input[type="radio"].visually-hidden {
   border: 2px solid #c1c1c1;
   border-radius: 50%;
 }
-.slider-item h3 {
+
+.main-header h3 {
   font-size: 55px;
   line-height: 55px;
   font-weight: 500;
   margin: 0;
   padding: 0;
+}
+
+.slider-item h3 {
   margin-bottom: 24px;
 }
 
@@ -652,11 +652,18 @@ input[type="radio"].visually-hidden {
   position: absolute;
 }
 
+.map {
+  /* position: relative; */
+  z-index: 1;
+}
+
 .map p {
   margin: 0;
   padding: 0;
 }
+
 .map img {
+  margin: 0 auto;
   z-index: 1;
 }
 
@@ -745,11 +752,10 @@ input[type="radio"].visually-hidden {
 }
 
 .modal-feedback {
-  bottom: 180px;
-  left: 380px;
+  bottom: 120px;
+  left: 50%;
+  margin-left: -480px;
 
-  margin-left: auto;
-  margin-right: auto;
   width: 760px;
   padding: 66px 100px 85px;
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.7);
@@ -836,4 +842,23 @@ input[type="radio"].visually-hidden {
   80% {
     transform: translateX(10px);
   }
+}
+
+.page-title {
+  padding-top: 102px;
+  text-align: center;
+}
+
+.catalog {
+  display: flex;
+}
+
+.filter {
+  width: 260px;
+}
+.templates {
+  display: flex;
+  width: 760px;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
